W-15810711: JDK17 - Support running MuleArtifactFunctionalTestCases without add-opens to ALL-UNNAMED (#959)